# uSh

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.md.in  autogen.sh  hrknew.txt
src/: CMakeLists.txt  base.c  library.c  lists.c  main.c  numbers.c  parser.c  term.c  test.ush  ush-low.h  ush.h  ushc-test
